// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 20px;
  font-family: 'Open Sans',sans-serif;
}

.c1 {
  width: 20%;
  max-width: 20%;
  text-transform: uppercase;
  overflow-wrap: break-word;
  font-weight: 400;
}

.c2 {
  width: 80%;
  border: 1px solid black;
  height: 30px;
}

<div
  className="c0"
>
  <label
    className="c1"
  />
  <input
    className="c2"
    type="text"
  />
</div>
`;

exports[`Input monetary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 20px;
  font-family: 'Open Sans',sans-serif;
}

.c1 {
  width: 20%;
  max-width: 20%;
  text-transform: uppercase;
  overflow-wrap: break-word;
  font-weight: 400;
}

.c2 {
  width: 80%;
  border: 1px solid black;
  height: 30px;
}

.c3 {
  margin-left: 5px;
}

<div
  className="c0"
>
  <label
    className="c1"
  />
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <input
      className="c2"
      type="number"
    />
    <span
      className="c3"
    >
      GBP
    </span>
  </div>
</div>
`;
